--- a/styles/style.css
+++ b/styles/style.css
@@ -1,104 +1,114 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  body {
-    background-color: #fff;
-    color: #000; 
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    width: 100%;
-  }
-  
-  .ingles-icon,
-  .dark-mode-icon {
-    padding: 10px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center; 
-    cursor: pointer;
-  }
-  
-  .items-nav-redirects {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
-    padding: 10px 0;  
-  }
-  
-  /* Nuevo estilo para el contenedor de anclas */
-  .nav-links {
-    display: flex;
-    border: 1px solid black; /* Borde para el modo claro */
-    border-radius: 10px;
-    padding: 5px 10px; /* Ajuste el padding según necesites */
-  }
-  
-  .items-nav-redirects a {
-    margin: 0 15px; 
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
-  }
-  
-  .toggle-switch {
-    appearance: none;
-    -webkit-appearance: none;
-    height: 25px; 
-    width: 50px; 
-    border-radius: 25px; 
-    background-color: #ccc; 
-    position: relative;
-    outline: none; 
-    cursor: pointer;
-    vertical-align: middle; 
-  }
-  
-  .toggle-switch:checked {
-    background-color: #2196f3;
-  }
-  
-  .toggle-switch::before {
-    content: "";
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 21px;
-    height: 21px;
-    border-radius: 50%; 
-    background: #fff;
-    transition: 0.2s;
-  }
-  
-  .toggle-switch:checked::before {
-    transform: translateX(25px); 
-  }
-  
-  .moon-icon {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px; 
-  }
-  
-  body.dark-mode {
-    background-color: #333; 
-    color: white; 
-  }
-  
-  body.dark-mode .items-nav-redirects a {
-    color: white; 
-  }
-  
-  /* Asegurándose de que el borde del .nav-links sea blanco en modo oscuro */
-  body.dark-mode .nav-links {
-    border-color: white;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-color: #fff;
+  color: #000;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+
+.ingles-icon,
+.dark-mode-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 10px; 
+}
+
+
+.ingles-icon img,
+.dark-mode-icon img {
+  width: 30px; 
+  height: 30px; 
+}
+
+.ingles-icon img.bandera-idioma {
+  position: relative;
+  top: -4.5px;
+  width: 40px !important;
+  height: 40px !important;
+  cursor: auto;
+}
+
+.ingles-icon img.change-languaje{
+  width: 40px !important;
+  height: 40px;
+}
+
+.items-nav-redirects {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  padding: 10px 0;
+}
+
+.nav-links {
+  display: flex;
+  border: 1px solid black; 
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+
+.items-nav-redirects a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+.toggle-switch {
+  appearance: none;
+  -webkit-appearance: none;
+  height: 25px;
+  width: 50px;
+  border-radius: 25px;
+  background-color: #ccc;
+  position: relative;
+  outline: none;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.toggle-switch:checked {
+  background-color: #2196f3;
+}
+
+.toggle-switch::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  background: #fff;
+  transition: 0.2s;
+}
+
+.toggle-switch:checked::before {
+  transform: translateX(25px);
+}
+
+body.dark-mode {
+  background-color: #333;
+  color: white;
+}
+
+body.dark-mode .items-nav-redirects a {
+  color: white;
+}
+
+body.dark-mode .nav-links {
+  border-color: white;
+}
