--- a/styles/style.css
+++ b/styles/style.css
@@ -23,14 +23,13 @@ header {
   display: flex;
   align-items: center;
   cursor: pointer;
-  gap: 10px; 
+  gap: 10px;
 }
-
 
 .ingles-icon img,
 .dark-mode-icon img {
-  width: 30px; 
-  height: 30px; 
+  width: 30px;
+  height: 30px;
 }
 
 .ingles-icon img.bandera-idioma {
@@ -41,19 +40,19 @@ header {
   cursor: auto;
 }
 
-.ingles-icon img.change-languaje{
+.ingles-icon img.change-languaje {
   width: 40px !important;
   height: 40px;
 }
 
 .nav-links {
   display: flex;
-  border: 1px solid black; 
+  border: 1px solid black;
   border-radius: 10px;
   padding: 1px 10px;
-  position: relative; 
+  position: relative;
   justify-content: center;
-  gap: 30px; 
+  gap: 30px;
   padding-bottom: 4px;
   height: 40px;
 }
@@ -106,7 +105,7 @@ body.dark-mode .nav-links {
   border-radius: 15px;
   height: 4px;
   background-color: #2196f3;
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 
 .nav-links a {
@@ -114,7 +113,7 @@ body.dark-mode .nav-links {
   color: black;
   font-weight: 500;
   padding: 5px 0;
-} 
+}
 
 .nav-links a:hover {
   color: #2196f3;
@@ -126,9 +125,89 @@ body.dark-mode .nav-links a {
   color: white;
   font-weight: 500;
   padding: 5px 0;
-} 
+}
 
 body.dark-mode .nav-links a:hover {
   color: #2196f3;
   transform: scale(1.1);
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.footer-container {
+  width: 95%;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+
+.footer-content {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 4px;
+}
+
+.footer-content .titulos-footer .nombre-footer {
+  font-size: 35px;
+}
+
+.footer-content .titulos-footer .dev-titulo-footer {
+  color: #2196f3;
+  font-size: 20px;
+}
+
+body.dark-mode .footer-container {
+  width: 95%;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.titulos-redirects {
+  display: flex;
+  flex-direction: row;
+}
+
+.redirects-footer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: 20px;
+  left: 260px;  
+  gap: 5px;
+}
+
+.titulos-footer {
+  position: absolute;
+  left: 90px;
+  padding-top: 15px;
+  padding-right: 100px;
+}
+
+.titulos-footer::before {
+  content: '';
+  position: absolute;
+  right: 0; 
+  top: 25px;
+  bottom: 0; 
+  width: 3px; 
+  background-color: #2196f3; 
+  border-bottom-left-radius: 10px; 
+}
+
+.redirects-footer a {
+  text-decoration: none;
+  color: #000;
+}
+
+body.dark-mode .redirects-footer a {
+  text-decoration: none;
+  color: white;
 }
