--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,23 @@ body {
   color: #000;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
+.main-container{
+  width: 95%;
+  margin: 20px auto;
+  padding-top: 40px;
 }
 
 .ingles-icon,
@@ -137,6 +148,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  padding-top: 40px;
 }
 
 .footer-container {
